# hackathon

./: Background.cpp  Background.hpp  Ball.cpp  Ball.hpp  Brick.cpp  Brick.hpp  CMakeLists.txt  Entity.hpp  Game.cpp  Game.hpp  GameOver.cpp  GameOver.hpp  Headers.hpp  MainMenu.cpp  MainMenu.hpp  Paddle.cpp  Paddle.hpp  Player.cpp  Player.hpp  README.md  main.cpp
.github/workflows/: doesItCompile.yaml
